# xiao_mmwave

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: esp-idf.yml
include/: xiao_mmwave.h
src/: xiao_mmwave.c
test/: CMakeLists.txt  test_xiao_mmwave.c
test_app/: CMakeLists.txt
test_app/main/: CMakeLists.txt  test_main.c
test_app/mocks/driver/: CMakeLists.txt
test_app/mocks/soc/: CMakeLists.txt
test_app/mocks/soc/include/soc/: clk_tree_defs.h
test_app/mocks/soc/mock/: mock_config.yaml
